# ChatGPT2API-Pro

./: .env.prod.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  DEPLOY.md  LICENSE  README.md  TODO-积分商城.md  docker-compose.prod.yml  docker-compose.yml  test_email.js
docs/superpowers/plans/: 2026-06-12-api-usage-dashboard.md  2026-06-21-admin-api-call-logs.md
docs/superpowers/specs/: 2026-06-12-api-usage-dashboard-design.md  2026-06-21-admin-api-call-logs-design.md
sdk/python/: README.md  pyproject.toml
sdk/python/img2design/: __init__.py  _models.py  client.py
server/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum  main.go
server/cmd/reset_admin/: main.go
server/internal/api/: announcements.go  api_log_admin.go  api_usage.go  auth.go  auth_email.go  auth_keys.go  auth_linuxdo.go  auth_login.go  checkin.go  coupon.go  e2e_gen_test.go  email_auth_test.go  gallery.go  generations.go  handler.go  handler_accounts.go  handler_image.go  handler_monitor.go  handler_register.go  handler_settings.go  handler_storage.go  handler_system.go  image_api_v1.go  image_enhance.go  image_to_text.go  invite.go  openai_chat.go  openai_compat.go  openai_responses.go  payment.go  payment_alipay.go  payment_alipay_adapter.go  payment_credit_adapter.go  payment_epay.go  payment_fulfill.go  payment_gateway.go  payment_ldcpay.go  plan_limit_test.go  plans.go  points_exchange.go  (+20 more)
server/internal/apilog/: broadcaster.go  writer.go  (+2 more)
server/migrations/: 001_init.sql
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/public/: config.js
(+155 files in other folders)
